--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                     <img src="images/gal.9a.JPG" alt="">
                 </a>
 
-                <a data-aos="zoom-in" data-aos-delay="1200" href="images/gal8a.JPG">
-                    <img src="images/gal8a.JPG" alt="">
+                <a data-aos="zoom-in" data-aos-delay="1200" href="images/ga8a.jpg">
+                    <img src="images/ga8a.jpg" alt="">
                 </a>
 
                 <a data-aos="zoom-in" data-aos-delay="1400" href="images/gal8a.JPG">
