--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
         </a>
         <navbar class="nav" id="navbar">
             <a onclick="mobile()" href="#despre">Despre noi</a>
-            <a onclick="mobile()" href="#galerie">Galerie</a>
-            <a onclick="mobile()" href="#contacte">Contacte</a>
-            <a onclick="mobile()" href="#raport"></a>
+            <a href="pages/noutati.html">Noutăți</a>
 
             <a href="pages/transparenta.html">Transparență</a>
             <a href="pages/orar.html">Orar</a>
-            <a href="pages/noutati.html">Noutăți</a>
-            <a href="pages/raport.html"></a>
-            
+
+            <a onclick="mobile()" href="#galerie">Galerie</a>
+            <a onclick="mobile()" href="#contacte">Contacte</a>
+
             <i onclick="mobile()" class="fa fa-bars hamburger" aria-hidden="true"></i>
 
 
@@ -50,7 +49,7 @@
         <div class="intro-content" data-aos="fade-in" data-aos="fade-in" data-aos-delay="400">
             <img class="logo" src="images/Logsc.png" alt="">
             <h1>IP Gimnaziul "Bogdan Petriceicu Hasdeu"</h1>
-            <h2>O scoala pentru fiecare!</h2>
+            <h2>O școală pentru fiecare!</h2>
 
             <a class="intro-btn" id="despre-btn" href="#despre">Despre noi</a>
             <a class="intro-btn" href="pages/noutati.html">Noutăți</a>
