--- a/pages/noutati.html
+++ b/pages/noutati.html
@@ -29,12 +29,13 @@
         </a>
         <navbar class="nav" id="navbar">
             <a onclick="mobile()" href="../index.html#despre">Despre noi</a>
-            <a onclick="mobile()" href="../index.html#galerie">Galerie</a>
-            <a href="transparenta.html">Transparenta</a>
-            <a onclick="mobile()" href="../index.html#contacte">Contacte</a>
-            <a href="orar.html">Orar</a>
-            <a href="raport.html">Rapoarte</a>
             <a href="noutati.html">Noutăți</a>
+            <a href="transparenta.html">Transparenta</a>
+            <a href="orar.html">Orar</a>
+            <a onclick="mobile()" href="../index.html#galerie">Galerie</a>
+
+            <a onclick="mobile()" href="../index.html#contacte">Contacte</a>
+
             <i onclick="mobile()" class="fa fa-bars hamburger" aria-hidden="true"></i>
 
         </navbar>
@@ -59,27 +60,33 @@
                     <h2 class="centered">Testarea Națională</h2>
                     <span class="data"> 01.05.2022</span>
 
-                    <img src="../images/gal3b.jpg" alt="">
-                    <p> În conformitate cu ordinul MEC nr.231 din 30.03.2022 <i>Cu privire la testarea națională în clasa a IV-a de studii 2021 -2022 </i>
-                         se probă orarul de desfășurare a testării naționale pentru evaluarea cunoștințelor elevilor din clasa a IV-a
+                    <img src="../images/evaluare.jpg" alt="">
+                    <p> În conformitate cu ordinul MEC nr.1356 din 05.10.2021 <i>Cu privire la examenele naționale de
+                            absolvire anul școlar 2021 -2022, </i>se probă orarul de desfășurare a testării naționale în învățământul primar.
+                        Mai multe detalii accesați <u> <a target="_blank"
+                                href="https://ance.gov.md/sites/default/files/2021.10.05_ord.mec_1356_examene_nationale_2021-2022.pdf">
+                                aici:</a></u>
                     </p>
                 </div>
 
                 <div class="noutate">
                     <h2 class="centered">Înscrierea copiilor în clasa I</h2>
-                    <span class="data"> 12.04.2022</span>
+                    <span class="data"> 01.04.2022</span>
 
-                    <img src="../images/gal3b.jpg" alt="">
+                    <img src="../images/inscriere.jpg" alt="">
                     <p> În conformitate cu ordinul MEC nr.231 din 30.03.2022 <i>Cu privire la înscriera
-                            copiilor în clasa I în anul de studii 2022 -2023 </i> se aprobă orarul de înscriere 
-                            a copiilor în clasa I.
-                            De la data de 01.04.2022 până la 01 iunie 2022 de  desfășoară <i> Prima etapă de înscriere în clasa I</i>  
-                           
+                            copiilor în clasa I în anul de studii 2022 -2023 </i> se aprobă orarul de înscriere
+                        a copiilor în clasa I.
+                        De la data de 01.04.2022 până la 01 iunie 2022 se desfășoară <i> Prima etapă de înscriere în
+                            clasa I</i>
+
                     </p>
 
                     <p><i> A doua etapă de înscriere în clasa I</i> va avea loc de la 14.06 - 29.08.2022.
-                        Mai multe detalii accesați: <a href="../resurse/clasaI_ordin.pdf">Ordinul Ministerului Educației și Cercetării nr.231 din 30.03.2022</a></p>
-                    
+                        Mai multe detalii accesați: <a target="_blank" href="../resurse/clasaI_ordin.pdf">Ordinul
+                            Ministerului Educației
+                            și Cercetării nr.231 din 30.03.2022</a></p>
+
                 </div>
 
             </div>
