--- a/pages/raport.html
+++ b/pages/raport.html
@@ -46,13 +46,17 @@
             <h1 class="centered">Rapoarte</h1>
 
             <ul>
-                <li><a href="../resurse/Raport școala 2021-2022.pdf"><div> Raport de activitate a instituției pentru anul de studii 2020 - 2021 </div></a></li>
-            </ul> 
+                <li><a href="../resurse/Raport școala 2021-2022.pdf">
+                        <div> Raport de activitate a instituției pentru anul de studii 2020 - 2021 </div>
+                    </a></li>
+            </ul>
 
             <ul>
-                <li><a href="../resurse/raportBuget mai2022.pdf"><div> Raport privind executarea bugetului instituției, mai 2022  </div></a></li>
-            </ul> 
-            
+                <li><a href="../resurse/raportBuget mai2022.pdf">
+                        <div> Raport privind executarea bugetului instituției, mai 2022 </div>
+                    </a></li>
+            </ul>
+
 
         </section>
 
