--- a/pages/transparenta.html
+++ b/pages/transparenta.html
@@ -29,13 +29,12 @@
         </a>
         <navbar class="nav" id="navbar">
             <a onclick="mobile()" href="../index.html#despre">Despre noi</a>
-            <a onclick="mobile()" href="../index.html#galerie">Galerie</a>
-            <a onclick="mobile()" href="../index.html#contacte">Contacte</a>
-            
+            <a href="noutati.html">Noutăți</a>
             <a onclick="mobile()" href="#">Transparență</a>
             <a href="orar.html">Orar</a>
-            <a href="raport.html"></a>
-            <a href="noutati.html">Noutăți</a>
+            <a onclick="mobile()" href="../index.html#galerie">Galerie</a>
+            <a onclick="mobile()" href="../index.html#contacte">Contacte</a>
+
             <i onclick="mobile()" class="fa fa-bars hamburger" aria-hidden="true"></i>
 
         </navbar>
@@ -48,11 +47,15 @@
             <h1 class="centered">Transparență</h1>
 
             <ul>
-                <li><a href="../resurse/Plan achizitii2021.pdf"><div> Plan de achiziții 2021 </div></a></li>
+                <li><a href="../resurse/Plan achizitii2021.pdf">
+                        <div> Plan de achiziții 2021 </div>
+                    </a></li>
             </ul>
 
             <ul>
-                <li><a href="../resurse/Buget 2022 Tataresti.pdf"><div> Bugetul instituției pentru anul 2022 </div></a></li>
+                <li><a href="../resurse/Buget 2022 Tataresti.pdf">
+                        <div> Bugetul instituției pentru anul 2022 </div>
+                    </a></li>
             </ul>
 
         </section>
