--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <a class="intro-btn" href="pages/noutati.html">Noutăți</a>
             <a class="intro-btn" href="pages/orar.html">Orar</a>
             <a class="intro-btn" href="pages/raport.html">Rapoarte</a>
+           
         </div>
 
         <div class="custom-shape-divider-bottom-1647624768">
@@ -93,6 +94,15 @@
                 în 2013 în IP Gimnaziul-Grădiniță ”Bogdan Petriceicu Hasdeu” în 2015 în cadrul căreia își desfășoară
                 activitatea 3 grupe de educație timpurie (vârsta 3,4 - 6 ani).
                 Din anul 2021 instituția revine la statutul de IP Gimnaziul ”Bogdan Petriceicu Hasdeu”.
+
+            </p>
+
+            <p align="center" class="p-despre">
+
+                                      <b> V I Z I U N E A:</b>    <br>   
+                    Promovăm un învățământ în care toți elevii să dispună de șanse egale,
+                 de progres și formare pentru a deveni cetățeni activi și productivi,
+                apți să se integreze cu succes în viața comunității și pe piața forței de muncă.
 
             </p>
 
@@ -201,6 +211,11 @@
 
                 <a data-aos="zoom-in" data-aos-delay="2600" href="images/gal4a.jpg">
                     <img src="images/gal4a.jpg" alt="">
+                </a>
+
+                <a data-aos="zoom-in" data-aos-delay="2800" href="images/hakaton.jpg">
+                    <img src="images/hakaton.jpg" alt="">
+
                 </a>
 
                 <a data-aos="zoom-in" data-aos-delay="2800" href="images/gal5a.jpg">
