--- a/pages/noutati.html
+++ b/pages/noutati.html
@@ -57,12 +57,40 @@
                 </div>
 
                 <div class="noutate">
+                    <h2 class="centered">Festivalul de Crăciun</h2>
+                    <span class="data"> 01.12.2022</span>
+
+                    <img src="../images/cmiad.jpg" alt="">
+                    <p> Pentru a trăi feeria de Crăciun Gimnaziul ”B.P.Hasdeu” organizează pentru elevi deplasarea cu
+                        transportul școlar la Festivalul de Crăciun organizat
+                        în Decembrie la data de 8, 9, 10, 15, 16, 17, 19, 20, 22 în satul Zîrnești, centrul de caritate
+                        <b><u>CMIAID</b> </u> <a target="_blank"
+                            href="https://www.facebook.com/cmiaid/posts/pfbid02Jvk95snERuNA388QBugoktAt27nruq8UAPWGbJouW1PK6DC3UFgpqWd8Moibe6d3l">
+                            aici:</a></u>
+                    </p>
+                </div>
+
+                <div class="noutate">
+                    <h2 class="centered">Ședința generală cu părinții</h2>
+                    <span class="data"> 10.11.2022</span>
+
+                    <img src="../images/sedinta.jpg" alt="">
+                    <p> Astăzi <i> 17 noiembrie 2022 </i> s-a desfășurat ședința generală cu părinții. Subiectul
+                        ședinței <b>”Colaborarea școală - familie - o atitudine unitară în educație”. </b>
+                        <u> <a target="_blank" href="../video/Sedinta cu parintii.mp4  ">
+                                aici:</a>
+                        </u>
+                    </p>
+                </div>
+
+                <div class="noutate">
                     <h2 class="centered">Testarea Națională</h2>
                     <span class="data"> 01.05.2022</span>
 
                     <img src="../images/evaluare.jpg" alt="">
                     <p> În conformitate cu ordinul MEC nr.1356 din 05.10.2021 <i>Cu privire la examenele naționale de
-                            absolvire anul școlar 2021 -2022, </i>se probă orarul de desfășurare a testării naționale în învățământul primar.
+                            absolvire anul școlar 2021 -2022, </i>se probă orarul de desfășurare a testării naționale în
+                        învățământul primar.
                         Mai multe detalii accesați <u> <a target="_blank"
                                 href="https://ance.gov.md/sites/default/files/2021.10.05_ord.mec_1356_examene_nationale_2021-2022.pdf">
                                 aici:</a></u>
