--- a/pages/orar.html
+++ b/pages/orar.html
@@ -29,11 +29,13 @@
         </a>
         <navbar class="nav" id="navbar">
             <a onclick="mobile()" href="../index.html#despre">Despre noi</a>
-            <a onclick="mobile()" href="../index.html#galerie">Galerie</a>
-            <a href="transparenta.html">Transparență</a>
-            <a onclick="mobile()" href="../index.html#contacte">Contacte</a>
-            <a href="orar.html">Orar</a>
             <a href="noutati.html">Noutăți</a>
+            
+            <a href="transparenta.html">Transparență</a>
+            <a href="orar.html">Orar</a>
+            <a onclick="mobile()" href="../index.html#galerie">Galerie</a>
+            <a onclick="mobile()" href="../index.html#contacte">Contacte</a>
+                        
             <i onclick="mobile()" class="fa fa-bars hamburger" aria-hidden="true"></i>
 
         </navbar>
@@ -42,7 +44,8 @@
 
     <main>
         <section id="orar" data-aos="fade-in">
-            <h1 class="centered">Orar</h1>
+            <h1 class="centered">Orar</h1> <br>
+             <h3>Semestrul I,   2022 - 2023</h3> <br>
 
             <details class="orar-details">
                 <summary>Clasa V-a </summary>
@@ -60,14 +63,10 @@
 
                 <div class="orar-imagini">
                     <a href="../images/clasa6A.jpg">
-                        <div class="clasa"> 6-a "A"</div>
-                        <img src="../images/clasa6A.jpg" alt="">
+                        <div class="clasa"> 6-a</div>
+                        <img src="../images/clasa6.jpg" alt="">
                     </a>
 
-                    <a href="../images/clasa6B.jpg">
-                        <div class="clasa"> 6-a "B"</div>
-                        <img src="../images/clasa6B.jpg" alt="">
-                    </a>
                 </div>
             </details>
 
@@ -75,9 +74,14 @@
                 <summary>Clasa VII-a </summary>
 
                 <div class="orar-imagini">
-                    <a href="../images/clasa7.jpg">
-                        <div class="clasa"> 7-a</div>
-                        <img src="../images/clasa7.jpg" alt="">
+                    <a href="../images/clasa7A.jpg">
+                        <div class="clasa"> 7-a ”A”</div>
+                        <img src="../images/clasa7A.jpg" alt="">
+                    </a>
+
+                    <a href="../images/clasa7B.jpg">
+                        <div class="clasa"> 7-a "B"</div>
+                        <img src="../images/clasa7B.jpg" alt="">
                     </a>
                 </div>
             </details>
@@ -91,7 +95,7 @@
                         <img src="../images/clasa8.jpg" alt="">
                     </a>
 
-                 </div>
+                </div>
             </details>
 
             <details class="orar-details">
